tests/invalid/generic_object_constructor_not_supported.wio
object Box {
    OnConstruct<T>(value: T) {
    }
}

fn Entry() -> i32 {
    return 0;
}
